--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,20 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-    <!-- Base de datos H2 en memoria (opcional para pruebas) -->
+    <!-- Base de datos H2 en memoria (opcional para pruebas)
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency> -->
     
+<dependency>
+  <groupId>com.microsoft.sqlserver</groupId>
+  <artifactId>mssql-jdbc</artifactId>
+  <version>10.2.0.jre17</version>
+</dependency>
+
+
   </dependencies>
 
   <build>
