--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=inventario-backend
+# Configuración para SQL Server (modificada para confiar en el certificado)
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=InventarioDB;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Dialecto de Hibernate para SQL Server
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# Para que Hibernate cree/actualice automáticamente las tablas
+spring.jpa.hibernate.ddl-auto=update
